<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/logo"
        app:civ_border_color="@color/white"
        app:civ_border_width="@dimen/_1sdp"
        app:civ_shadow="true"
        app:civ_shadow_color="#8BC34A"
        app:civ_shadow_radius="0"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_150sdp"
        android:layout_margin="@dimen/_60sdp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableLeft="@drawable/username_icon"
        android:hint="@string/username"
        android:layout_below="@+id/logo"/>

    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/password"
        android:drawableLeft="@drawable/user_icon"
        android:layout_below="@+id/username"/>

    <Button
        android:id="@+id/login"
        android:layout_width="@dimen/_110sdp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:hint="@string/login"
        app:backgroundTint="#4CAF50"
        android:layout_below="@+id/password"/>
    <Button
        android:id="@+id/register"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:hint="@string/register"
        app:backgroundTint="#4CAF50"
        android:layout_toRightOf="@id/login"
        android:layout_below="@+id/password"/>


</RelativeLayout>